--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Music House Rock</title>
+    <script>
+        alert("El archivo HTML se ha cargado correctamente.");
+    </script>
 </head>
 <body>
     <h1>PREENTREGA 1</h1>
