cambio index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music House Rock</title>
+    <title>Bitter Coffe</title>
 </head>
 <body>
     <h1>PREENTREGA 2</h1>
